2002-12-24  Jody Goldberg <jody@gnome.org>

	* ms-formula-read.c (excel_parse_formula) : disabled a bit too much
	  debug info and broke the code.

2002-12-24  Jody Goldberg <jody@gnome.org>

	* ms-excel-read.c (ms_sheet_create_obj) : cut-n-paste-o in line creation
	  support font color for text boxes.
	  (excel_palette_get) : just call colour 64 black if it gets this far.
	    It only happens for shet objects and we need to do more research
	    on how to handle these.
	(excel_read_DV) : fix double free

	* ms-obj.c (ms_obj_read_pre_biff8_obj) : be more picky about what we
	  call an arrow head.  Fix the directions for lines.  Find the
	  undocumented flag to fix named objects.

2002-12-22  Jody Goldberg <jody@gnome.org>

	* Release 1.1.14

2002-12-22  Jody Goldberg <jody@gnome.org>

	* Release 1.1.13

2002-12-21  Jody Goldberg <jody@gnome.org>

	* ms-escher.c (excel_write_MS_O_DRAWING_GROUP) : new.
	* ms-excel-write.c (excel_write_AUTOFILTERINFO) : write the biff8
	  combos.  Thats it we're done.

2002-12-20  Jody Goldberg <jody@gnome.org>

	* ms-excel-write.c (excel_write_AUTOFILTERINFO) : write the fields
	  to handle the last 1/4 of the puzzle.  The only thing missing now is
	  exporting the combos for biff8.
	(excel_write_DOPER) : new.

2002-12-18  Jody Goldberg <jody@gnome.org>

	* ms-excel-write.c (excel_write_AUTOFILTERINFO) : new.
	(write_sheet_head) : use it here to export the 1st 1/4 of autofilters.
	(excel_write_NAME) : support hidden names.
	(excel_write_autofilter_names) : create pretend names for the 1st
	 filter in each sheet.
	(write_workbook) : use excel_write_autofilter_names to generate the
	  next 1/4 of autofilters.
	(excel_write_autofilter_objs) : generate simple biff7 style objects
	  for the filter combos.
	(excel_write_sheet) : Use excel_write_autofilter_objs for the next 1/4.

2002-12-17  Jody Goldberg <jody@gnome.org>

	* ms-formula-write.c (excel_write_prep_expr) : make it public.